# Rackett

./: .gitignore  Cargo.toml
frontend/: index.html
frontend-dev/: vue.config.js
frontend-dev/public/: index.html
frontend-dev/src/: router.js
frontend-dev/src/components/base/: MaterialSnackbar.vue
frontend-dev/src/locales/: en.json
frontend-dev/src/views/dashboard/components/core/: Drawer.vue
frontend-dev/src/views/dashboard/pages/: Search.vue
frontend-dev/src/views/dashboard/pages/search/: Download.vue  Search.vue
frontend/js/: app.09d812be.js  app.09d812be.js.map  chunk-vendors.93bd427b.js
src/: main.rs  omdb.rs
src/index/: mod.rs
