[package]
name = "rackett"
version = "0.0.1"
authors = ["Ford Smith <fordmsmith13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "io-std"] }
reqwest = "0.10.4"
config = "0.10"
async-trait = "0.1"
scraper = "0.11.0"
torrent-name-parser = "0.2.0"
actix-web = "2"
actix-rt = "1"
actix-files = "0.2.1"
serde = "1.0.104"
serde_json = "1"
lazy_static = "1.4.0"
